--- a/CSS/style.css
+++ b/CSS/style.css
@@ -70,7 +70,7 @@ a {
 
 .btn-title {
   background: rgb(2,0,36);
-  background: linear-gradient(180deg, rgba(226,116,228,1) 0%, rgba(137,40,204,1) 100%);
+  background: linear-gradient(180deg, rgba(226,116,228,1) 0%, var(--main-primary-color));
   border: none;
   color: white;
   font-weight: bold;
@@ -209,7 +209,72 @@ footer i {
   left: -70px;
   font-size: 22px;
 }
-
-
-
-
+.img_menu{
+  width: 100%;
+  height: 260px;
+  object-fit: cover;
+}
+.main_menu {
+  background-color: var(--main-lightgrey2-color);
+  padding-top: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 40px;
+  margin-bottom: -40px;
+  top: -40px;
+  position: relative;
+  border-top-left-radius: 35px;
+  border-top-right-radius: 35px;
+}
+.menu_title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 10px;
+}
+.menu_title h2 {
+  font-family: 'Shrikhand', cursive;
+  margin: 0;
+}
+.main_menu h3,h4,p {
+  margin: 0;
+}
+.main_menu h3 {
+  margin-top: 50px;
+}
+.underline_div {
+  background-color: var(--main-tertiary-color);
+  height: 4px;
+  width: 60px;
+  margin-bottom: 20px;
+}
+.menu_card {
+  background-color: white;
+  border-radius: 15px;
+  padding: 10px;
+  margin-bottom: 15px;
+  box-shadow: 5px 8px 10px -5px rgb(110 110 110 / 50%);
+  -webkit-box-shadow: 5px 8px 10px -5px rgb(110 110 110 / 50%);
+  -moz-box-shadow: 5px 8px 10px -5px rgb(110 110 110 / 50%);
+}
+.menu_card h4 {
+  margin-bottom: 3px;
+}
+.menu_card div {
+  display: flex;
+  justify-content: space-between;
+}
+.footer_menu {
+  position: relative;
+}
+.btn-menu {
+  width: 50%;
+  margin: auto;
+  padding: 15px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+.div_btn_menu {
+  display: flex;
+  justify-content: center;
+}
