--- a/CSS/style.css
+++ b/CSS/style.css
@@ -47,6 +47,7 @@ a {
   align-items: center;
   justify-content: center;
   background-color: var(--main-lightgrey2-color);
+  height: 50px;
 }
 #nav_text_localisation p{
   margin-left: 10px;
@@ -66,6 +67,7 @@ a {
   margin: auto;
   margin-top: 10px;
   margin-bottom: 35px;
+  font-size: 16px;
 }
 
 .btn-title {
@@ -107,6 +109,9 @@ a {
 }
 .btn-working:hover {
   background-color: var(--main-lightpurple-color);
+}
+.btn-working:hover i{
+  color: var(--main-purple-color);
 }
 .btn-working i:hover {
   color: var(--main-purple-color);
@@ -201,7 +206,6 @@ footer i {
   justify-content: center;
   align-items: center;
   height: 60px;
-  border-bottom: 2px solid lightgrey;
   padding-top: 10px;
 }
 #menu_logo_title a {
@@ -251,18 +255,34 @@ footer i {
 .menu_card {
   background-color: white;
   border-radius: 15px;
-  padding: 10px;
   margin-bottom: 15px;
+  display: flex;
+  overflow: hidden;
+  justify-content: space-between;
+  align-items: center;
   box-shadow: 5px 8px 10px -5px rgb(110 110 110 / 50%);
   -webkit-box-shadow: 5px 8px 10px -5px rgb(110 110 110 / 50%);
   -moz-box-shadow: 5px 8px 10px -5px rgb(110 110 110 / 50%);
 }
+.menu_card > div:last-child {
+  background-color: var(--main-tertiary-color);
+  display: none;
+}
+.menu_card i {
+  padding: 23px;
+  color: white;
+}
 .menu_card h4 {
   margin-bottom: 3px;
 }
-.menu_card div {
+.menu_card div:first-child {
+  width: 100%;
+  padding: 10px;
+}
+.menu_card div:first-child > div{
   display: flex;
   justify-content: space-between;
+  width: 100%;
 }
 .footer_menu {
   position: relative;
@@ -278,3 +298,143 @@ footer i {
   display: flex;
   justify-content: center;
 }
+
+/** Animation **/
+
+/**************/
+.menu_card:hover .fa-check-circle{
+  -webkit-animation: rotate-center 0.6s ease-in-out both;
+          animation: rotate-center 0.6s ease-in-out both;
+}
+
+.menu_card:hover div:last-child{
+  display: flex;
+  -webkit-animation: slide-left 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+          animation: slide-left 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+
+.menu_card:hover p:first-child {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 230px;
+}
+
+/************** A modifier **************/
+
+.slide-top1{
+  -webkit-animation: slide-top 0.5s ease 0.25s both;
+          animation: slide-top 0.5s ease 0.25s both;
+}
+.slide-top2{
+  -webkit-animation: slide-top 0.5s ease 0.5s both;
+          animation: slide-top 0.5s ease 0.5s both;
+}
+.slide-top3{
+  -webkit-animation: slide-top 0.5s ease 0.75s both;
+          animation: slide-top 0.5s ease 0.75s both;
+}
+.slide-top4{
+  -webkit-animation: slide-top 0.5s ease 1s both;
+          animation: slide-top 0.5s ease 1s both;
+}
+.slide-top5{
+  -webkit-animation: slide-top 0.5s ease 1.25s both;
+          animation: slide-top 0.5s ease 1.25s both;
+}
+.slide-top6{
+  -webkit-animation: slide-top 0.5s ease 1.5s both;
+          animation: slide-top 0.5s ease 1.5s both;
+}
+.slide-top7{
+  -webkit-animation: slide-top 0.5s ease 1.75s both;
+          animation: slide-top 0.5s ease 1.75s both;
+}
+.slide-top8{
+  -webkit-animation: slide-top 0.5s ease 2s both;
+          animation: slide-top 0.5s ease 2s both;
+}
+.slide-top9{
+  -webkit-animation: slide-top 0.5s ease 2.25s both;
+          animation: slide-top 0.5s ease 2.25s both;
+}
+
+/**************/
+
+@-webkit-keyframes rotate-center {
+  0% {
+    -webkit-transform: rotate(-180deg);
+            transform: rotate(-180deg);
+  }
+  100% {
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
+  }
+}
+@keyframes rotate-center {
+  0% {
+    -webkit-transform: rotate(-180deg);
+            transform: rotate(-180deg);
+  }
+  100% {
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
+  }
+}
+
+
+@-webkit-keyframes slide-left {
+  0% {
+    -webkit-transform: translateX(100px);
+            transform: translateX(100px);
+  }
+  100% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+}
+@keyframes slide-left {
+  0% {
+    -webkit-transform: translateX(100px);
+            transform: translateX(100px);
+  }
+  100% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+}
+
+
+@-webkit-keyframes slide-top {
+  0% {
+    visibility: hidden;
+    -webkit-transform: translateY(10px);
+            transform: translateY(10px);
+  }
+  100% {
+    position: initial;
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    visibility: visibility;
+  }
+}
+@keyframes slide-top {
+  0% {
+    visibility: hidden;
+    -webkit-transform: translateY(10px);
+            transform: translateY(10px);
+  }
+  100% {
+    position: initial;
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    visibility: visibility;
+  }
+}
+
+
+
+
+
+
+
