--- a/CSS/style.css
+++ b/CSS/style.css
@@ -83,6 +83,9 @@ a {
   -webkit-box-shadow: 5px 8px 10px -5px rgb(110 110 110);
   -moz-box-shadow: 5px 8px 10px -5px rgb(110 110 110);
 }
+.btn-title:hover {
+  transform: scale(0.98);
+}
 /** fonctionnement **/
 
 .div_working {
@@ -100,6 +103,7 @@ a {
   align-items: center;
   margin-bottom: 20px;
   height: 80px;
+  width: 100%;
   border-radius: 25px;
   border: none;
   font-size: 16px;
@@ -109,6 +113,7 @@ a {
 }
 .btn-working:hover {
   background-color: var(--main-lightpurple-color);
+  transform: scale(0.98);
 }
 .btn-working:hover i{
   color: var(--main-purple-color);
@@ -117,7 +122,10 @@ a {
   color: var(--main-purple-color);
 }
 .btn-working i {
-  font-size: 12px;
+  font-size: 18px;
+}
+#fa-mobile-alt {
+  font-size: 24px;
 }
 .btn-working i:last-child {
   margin-right: 20px;
@@ -156,8 +164,11 @@ a {
   box-shadow: 5px 8px 10px -5px rgb(110 110 110 / 50%);
   -webkit-box-shadow: 5px 8px 10px -5px rgb(110 110 110 / 50%);
   -moz-box-shadow: 5px 8px 10px -5px rgb(110 110 110 / 50%);
-
 }
+.homepage_restaurant_card:hover {
+  transform: scale(0.98);
+}
+
 .homepage_restaurant_card a:last-child {
   margin-bottom: 0;
 }
@@ -218,6 +229,20 @@ footer i {
   height: 260px;
   object-fit: cover;
 }
+
+.heart_div:hover .purple{
+  display: block;
+}
+.heart_div:hover .border{
+  display: none;
+}
+.heart_div .purple{
+  display: none;
+}
+.purple {
+  color: var(--main-purple-color);
+}
+
 .main_menu {
   background-color: var(--main-lightgrey2-color);
   padding-top: 20px;
@@ -433,8 +458,133 @@ footer i {
 }
 
 
+/************** Media queries **************/
 
 
+@media screen and (min-width: 550px) and (max-width: 849px){
+  .hompage_img_restaurant {
+    height: 280px;
+  }
+}
+@media screen and (min-width: 850px){
+  .desktop_restaurant_div {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  .homepage_restaurant_card {
+    width: 270px;
+  }
+  .btn-working {
+    width: 300px;
+  }
+  .div_working {
+    display: flex;
+    justify-content: center;
+  }
+  .img_menu {
+    height: 400px;
+  }
+  .desktop_menu_div {
+    display: flex;
+    justify-content: center;
+  }
+  .desktop_menu_div > div:nth-child(2) {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+  .desktop_menu_div > div{
+    width: 260px;
+  }
+  .menu_title {
+    text-align: center;
+  }
+  .div_btn_menu {
+    width: 300px;
+    margin: auto;
+  }
+  footer img{
+    width: auto;
+  }
+  footer div {
+    display: flex;
+    justify-content: space-around;
+  }
+  .menu_card p:first-child {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 200px;
+  }
+  .menu_card:hover p:first-child {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 200px;
+  }
+  .btn-working {
+    height: 60px;
+  }
+  #div_explorer {
+    padding-bottom: 30px;
+  }
+  .btn-working {
+    width: 250px;
+  }
+  .btn-working i:last-child{
+    margin-right: 10px;
+  }
+  .btn_working_div {
+    display: flex;
+    justify-content: space-around;
+  } 
+}
 
+@media screen and (min-width: 1000px){
+  .menu_card p:first-child {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 240px;
+  }
+  .menu_card:hover p:first-child {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 170px;
+  }
+  .desktop_menu_div > div{
+    width: 300px;
+  }
+  .menu_card:hover h4 {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 210px;
+  }
+}
 
+@media screen and (min-width: 1200px){
+  .menu_card p:first-child {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 320px;
+  }
+  .menu_card:hover p:first-child {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 260px;
+  }
+  .desktop_menu_div > div{
+    width: 400px;
+  }
+  .menu_card:hover h4 {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 300px;
+  }
+}
 
