--- a/CSS/style.css
+++ b/CSS/style.css
@@ -189,6 +189,26 @@ a {
 .homepage_restaurant_subtitle p{
   margin: 0;
 }
+.new_restaurant {
+  position: relative;
+  top: -240px;
+  display: flex;
+  justify-content: right;
+  padding-right: 10px;
+}
+.new_restaurant p {
+  color: rgb(46,149,120);
+  background-color: var(--main-tertiary-color);
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 12px;
+  padding-right: 12px;
+  width: fit-content;
+  border-radius: 3px;
+}
+.no_padding_bottom {
+  padding-bottom: 0;
+}
 
 /****** footer ********/
 
@@ -240,7 +260,10 @@ footer i {
   display: none;
 }
 .purple {
-  color: var(--main-purple-color);
+  background-image: linear-gradient(180deg, var(--main-primary-color) 0%, rgba(226,116,228,1));
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
 }
 
 .main_menu {
@@ -465,6 +488,9 @@ footer i {
   .hompage_img_restaurant {
     height: 280px;
   }
+  .new_restaurant {
+    top: -310px;
+  }
 }
 @media screen and (min-width: 850px){
   .desktop_restaurant_div {
@@ -475,6 +501,10 @@ footer i {
   .homepage_restaurant_card {
     width: 270px;
   }
+  .new_restaurant_card{
+    height: 280px;
+  }
+
   .btn-working {
     width: 300px;
   }
