--- a/CSS/style.css
+++ b/CSS/style.css
@@ -488,7 +488,6 @@ footer i {
           animation: display-animation 0.5s ease 2.5s both;
 }
 
-
 /**************/
 
 @-webkit-keyframes rotate-center {
@@ -565,7 +564,7 @@ footer i {
     position: initial;
     -webkit-transform: translateY(0);
             transform: translateY(0);
-    visibility: visible;
+    visibility: visibility;
   }
 }
 @keyframes slide-top {
@@ -579,7 +578,7 @@ footer i {
     position: initial;
     -webkit-transform: translateY(0);
             transform: translateY(0);
-    visibility: visible;
+    visibility: visibility;
   }
 }
 
